comments and edits